<resources>
    <string name="app_name" translatable="false">FARM CLICK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about_us">About Us</string>
    <string name="action_share">Share</string>
    <string name="action_logout">Logout</string>


    <string name="title_activity_maps">Map</string>
    <string name="Show_Details"><u>Show Details</u></string>
    <string name="url_app_google_play">https://play.google.com/store/apps/details?id=com.olx.southasia&amp;hl=en</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_profile">Profile</string>
    <string name="about_us">CONTACT NUMBER: 9767743904</string>
    <string name="select_fromdate">select From Date</string>
    <string name="select_todate">select To Date</string>
    <string name="fromtime">From Time</string>
    <string name="totime">To Time</string>
    <string name="placeorder">Place Order</string>
    <string name="select_ylocation">Select your Location</string>
    <string name="reg_title">REGISTRATION</string>
    <string name="enter_equipname">Enter equipment name</string>
    <string name="add_equip">Add Equipments</string>
    <string name="uploadimg">Upload Image</string>
    <string name="chooseimg">Choose Image</string>
    <string name="eneter_deposite">Enter deposite</string>
    <string name="enter_price">Enter prize</string>
    <string name="enter_taluka">Enter taluka</string>
    <string name="enter_city">Enter City</string>
    <string name="select_loc">Select Location here..</string>
    <string name="enter_contact">Enter contact number</string>
    <string name="enetr_equipdetails">Enter detail of equipment</string>
    <string name="enetr_yphonenumber">Enter your phone number</string>
    <string name="conti">Continue</string>
    <string name="click_toregister">Click here to Register</string>
    <string name="searchhere">Search here</string>
    <string name="search_loc">Select your Location</string>
    <string name="chng_add">Change Address</string>
    <string name="verifcode">VERIFICTION CODE</string>
    <string name="enter_verifcode">Enter verification code</string>
    <string name="signin">Sign In</string>
    <string name="profile">Profile</string>
    <string name="enter_name">Enter name</string>
    <string name="enetr_mobile">Enter mobile number</string>
    <string name="enter_add">Enter address</string>
    <string name="enter_cit">Enter City</string>
    <string name="user_reg">USER REGISTRATION</string>
    <string name="signup">Signup</string>
    <string name="search_map">Search On Map</string>
    <string name="date">Date :</string>
    <string name="ok">OK</string>
    <string name="address">Address :</string>
    <string name="deposite">Deposit :</string>
    <string name="amount">Amount :</string>
    <string name="contac">Contact :</string>
    <string name="statuc">Status :</string>
    <string name="time">Time :</string>
    <string name="wanttologout">Do You Want To Logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="approve">Approved</string>
    <string name="diapprove">Disapproved</string>
    <string name="myorder">My Order</string>
    <string name="bookedorder">Booked Order</string>
    <string name="coommuni">Communicate</string>
    <string name="rs">Rs.</string>
    <string name="cont">Contact :</string>
    <string name="add">Address :</string>
    <string name="deposite_rs">Deposit Amount :Rs.</string>
    <string name="selecttime">Select Time</string>
    <string name="please_selectdate">Please select date</string>
    <string name="please_selectfromtime">Please Select From Time</string>
    <string name="please_selecttotime">Please Select To Time</string>
    <string name="equip_booking">Equipment Booking</string>
    <string name="equip_booking_by">your equipment book by</string>
    <string name="order_sucess">Order Added Successful</string>
    <string name="oreder_fail">Order Not Added Successful</string>
    <string name="requesterror">Request error</string>
    <string name="select_pic">Select Picture</string>
    <string name="eqip_added_sucess">Equipment Added Successful</string>
    <string name="eqip_added_fail">Equipment Not Added Successful</string>
    <string name="valid_mobile">Enter a valid mobile</string>
    <string name="mobile_not_registered">This number is not registered</string>
    <string name="permission_needed">Location Permission Needed</string>
    <string name="permi_msg">This app needs the Location permission, please accept to use location functionality</string>
    <string name="exit_fromapp">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permi_denied">permission denied</string>
    <string name="enter_code">Enter valid code</string>
    <string name="user_added">User Added Successfully</string>
    <string name="enter_user_not_added">User Not Added Successfully</string>
    <string name="equipment">Equipment  :</string>
    <string name="tooo">    To     </string>
    <string name="want_to_delete">Are you sure you want to delete?</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="today">Today</string>
    <string name="not_today_booking">Not Todays booking history available !!</string>
    <string name="not_past_booking">Not past booking history available !!</string>
    <string name="not_upcoing_booking">Not Upcoming booking history available !!</string>
    <string name="loading_firebase">Loading Data from Firebase Database</string>
    <string name="action_language">Language</string>
    <string name="english">English</string>
    <string name="marathi">Marathi</string>
    <string name="add_product">+ Product</string>
    <string name="enter_prodname">Enter Product Name</string>
    <string name="enetr_produdetails">Enter Product Description</string>
    <string name="enter_qty">Enter Quantity</string>
    <string name="prod_title">Add Product</string>
    <string name="produ_added_sucess">Product Added Successfully !!!</string>
    <string name="produ_added_fail">Fail to add product</string>
    <string name="enter_usertype">Select User Type</string>
    <string name="select_user">Select User</string>
    <string name="action_expertisenumber">Expertise Number</string>
    <string name="action_marketprices">Market Prices</string>
    <string name="msg_expertisenumber">Call to Expertise Number by clicking on button below: </string>
    <string name="call">Call now</string>
    <string name="msg_visit">Clickon visit button to know more about market prices.</string>
    <string name="visit">Visit</string>
    <string name="viewproduct">View Products</string>
    <string name="prodname">Product Name :</string>
    <string name="book">Book Now</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="product">Product</string>
    <string name="enter_password">Enter Password</string>
    <string name="enetr_ypassword">Enter your password</string>
    <string name="valid_password">Enter valid password</string>

</resources>
