<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_language"
        android:orderInCategory="100"
        android:title="@string/action_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:title="@string/action_about_us"
        app:showAsAction="never" />
   <item
       android:id="@+id/action_share"
       android:orderInCategory="100"
       android:title="@string/action_share"
       app:showAsAction="never" />
   <item
       android:id="@+id/action_logout"
       android:orderInCategory="100"
       android:title="@string/action_logout"
       app:showAsAction="never" />
    <item
       android:id="@+id/action_expertisenumber"
       android:orderInCategory="100"
       android:title="@string/action_expertisenumber"
       app:showAsAction="never" />
    <item
       android:id="@+id/action_marketprices"
       android:orderInCategory="100"
       android:title="@string/action_marketprices"
       app:showAsAction="never" />
    <item
       android:id="@+id/action_order"
       android:orderInCategory="100"
       android:title="@string/myorder"
       app:showAsAction="never" />
</menu>
