<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/add_equip" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/myorder" />
        <item
            android:id="@+id/nav_booked_order"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/bookedorder" />
       <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_about_us" />

    </group>

    <item android:title="@string/coommuni">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
           <!-- <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />-->
        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_log_out"
        android:title="@string/action_logout" />

</menu>
