<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:fitsSystemWindows="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_reg"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="17sp"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    >
    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:maxLength="30"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextmobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:hint="@string/enetr_mobile"
            android:inputType="text"
            android:maxLength="30"
            android:padding="10dp" />



        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_address"
            android:drawablePadding="10dp"
            android:hint="@string/enter_add"
            android:inputType="textMultiLine"
            android:editable="false"
            android:focusable="false"
            android:maxLength="80"
            android:minHeight="50dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/enter_password"
            android:inputType="text"
            android:maxLength="30"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextcity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_city"
            android:drawablePadding="10dp"
            android:hint="@string/enter_city"
            android:inputType="text"
            android:maxLength="30"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTexttaluka"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_city"
            android:drawablePadding="10dp"
            android:hint="@string/enter_taluka"
            android:inputType="text"
            android:maxLength="30"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextusertype"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/edt_background"
            android:drawableStart="@drawable/ic_city"
            android:drawablePadding="10dp"
            android:hint="@string/enter_usertype"
            android:inputType="text"
            android:editable="false"
            android:focusable="false"
            android:maxLength="30"
            android:padding="10dp" />
        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/shadowroundbutton"
            android:text="@string/signup" />

    </LinearLayout>
</ScrollView>
</LinearLayout>