<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/msg_expertisenumber"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        />
    <!--<View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#c0c0c0" />-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_margin="10dp"
            android:background="@color/grey_60"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call"
            android:paddingHorizontal="7dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    </LinearLayout>


</LinearLayout>