<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity.AddProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/BtnViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:background="@drawable/shadowroundbutton"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/viewproduct"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prod_title"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edt_background"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:hint="@string/enter_prodname"
                android:inputType="text"
                android:maxLength="30"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edt_background"
                android:drawableStart="@drawable/ic_description"
                android:drawablePadding="10dp"
                android:hint="@string/enetr_produdetails"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextQuantity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edt_background"
                android:drawableStart="@drawable/ic_storefront"
                android:drawablePadding="10dp"
                android:hint="@string/enter_qty"
                android:inputType="text"
                android:maxLength="10"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextPrize"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edt_background"
                android:drawableStart="@drawable/ic_money"
                android:drawablePadding="10dp"
                android:hint="@string/enter_price"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextcityone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edt_background"
                android:drawableStart="@drawable/ic_city"
                android:drawablePadding="10dp"
                android:hint="@string/enter_city"
                android:inputType="text"
                android:maxLength="30"
                android:padding="10dp" />
            <EditText
                android:id="@+id/editTextPincode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edt_background"
                android:drawableStart="@drawable/ic_city"
                android:drawablePadding="10dp"
                android:hint="@string/enter_pincode"
                android:inputType="number"
                android:maxLength="6"
                android:padding="10dp" />
          <!--  <EditText
                android:id="@+id/editTexttalukaone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edt_background"
                android:drawableStart="@drawable/ic_city"
                android:drawablePadding="10dp"
                android:hint="@string/enter_taluka"
                android:inputType="text"
                android:maxLength="30"
                android:padding="10dp" />


            <EditText
                android:id="@+id/editTextPrize"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edt_background"
                android:drawableStart="@drawable/ic_money"
                android:drawablePadding="10dp"
                android:hint="@string/enter_price"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextDeposite"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/edt_background"
                android:drawableStart="@drawable/ic_money"
                android:drawablePadding="10dp"
                android:hint="@string/eneter_deposite"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:padding="10dp" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ChooseImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0.6"
                    android:text="@string/chooseimg"
                    android:background="@drawable/edt_background"/>

                <ImageView
                    android:id="@+id/imgview_image"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.4"
                    android:tooltipText="@string/uploadimg" />


                <Button
                    android:id="@+id/btn_uploadImage"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/shadowroundbutton"
                    android:text="@string/uploadimg"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shadowroundbutton"
                android:text="@string/prod_title"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>